# anymerge

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml  test.yml
docs/: index.md
reference/SUMMARY/: index.html
reference/anymerge/: index.html
reference/anymerge/adapters/: index.html
reference/anymerge/adapters/base_adapter/: index.html
reference/anymerge/adapters/dataclass_adapter/: index.html
reference/anymerge/adapters/dict_adapter/: index.html
reference/anymerge/adapters/pydantic_adapter/: index.html
reference/anymerge/adapters/typeddict_adapter/: index.html
reference/anymerge/exceptions/: index.html
reference/anymerge/models/: index.html
reference/anymerge/reducers/: index.html
reference/anymerge/types/: index.html
search/: search_index.json
src/anymerge/: __init__.py  _api.py  _merger.py  _models.py  _predicates.py  _typing_utils.py  errors.py  models.py  reducers.py  types.py
src/anymerge/adapters/: __init__.py  base_adapter.py  dataclass_adapter.py  dict_adapter.py  pydantic_adapter.py  typeddict_adapter.py
tests/: test_merger.py  test_predicates.py  test_typing_utils.py
tests/adapters/: fixtures.py  test_base_adapter.py  test_dataclass_adapter.py  test_dict_adapter.py  test_pydantic_adapter.py  test_typeddict_adapter.py
