[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "anymerge"
dynamic = ["version"]
description = 'A Python library for merging dataclasses, TypedDicts, and Pydantic models seamlessly.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Jian Yuan Lee", email = "jianyuan@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/jianyuan/anymerge#readme"
Issues = "https://github.com/jianyuan/anymerge/issues"
Source = "https://github.com/jianyuan/anymerge"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
check = "ruff check {args:src/anymerge tests}"
format = "ruff format {args:src/anymerge tests}"
test = "pytest {args:tests}"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/anymerge tests}"

[tool.coverage.run]
source_pkgs = ["anymerge", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
anymerge = ["src/anymerge", "*/anymerge/src/anymerge"]
tests = ["tests", "*/anymerge/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
